--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "gcp-build": "npm run build",
     "preview": "vite preview",
     "start": "node server.js"
   },
@@ -19,9 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^2.12.7",
-    "uuid": "^10.0.0"
-  },
-  "devDependencies": {
+    "uuid": "^10.0.0",
     "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -32,5 +34,6 @@
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3",
     "vite": "^5.3.1"
-  }
+  },
+  "devDependencies": {}
 }
