--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "sqlite3": "^5.1.7",
+    "sqlite": "^5.1.1",
+    "express-rate-limit": "^7.3.1"
   },
   "devDependencies": {}
 }
